--- a/_config.yml
+++ b/_config.yml
@@ -176,6 +176,9 @@ collections:
   teaching:
     output: true
     permalink: /teaching/:path/
+  people:
+    output: true
+    permalink: /people/:path/
 
 news_scrollable: true # adds a vertical scroll bar if there are more than 3 news items
 news_limit: 5 # leave blank to include all the news in the `_news` folder
