--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: SJTU
+title: 云计算智能融合团队 # the website title (if blank, full name will be used instead)
+first_name: iCLOUD
 middle_name: 
-last_name: AISIG
+last_name: SJTU
 # email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   #TODO
@@ -18,7 +18,7 @@ keywords:  # add your own keywords or leave empty
 lang: cn # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url:  https://aisigsjtu.github.io # the base hostname & protocol for your site
+url:  https://icloud.sjtu.edu.cn # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -170,12 +170,6 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
-  projects:
-    output: true
-    permalink: /projects/:path/
-  teaching:
-    output: true
-    permalink: /teaching/:path/
   people:
     output: true
     permalink: /people/:path/
